Terminada implementação aplicação dojo

--- a/musica-frontend/src/app/app.component.html
+++ b/musica-frontend/src/app/app.component.html
@@ -1,26 +1,28 @@
-
-<app-topo 
-    (topoMusicSearch)="buscarMusica($event)"
-    (topoPlaylistSearch)="buscarPlaylist($event)" 
-></app-topo>
-<div class="col-md-12">
-    <div class="row">
-    
-        <div class="col-md-5">
-            <app-musica [musicas]="musicasLista"></app-musica>
-        </div>
+<div>
+    <app-topo 
+        (topoMusicSearch)="buscarMusica($event)"
+        (topoPlaylistSearch)="buscarPlaylist($event)" 
+    ></app-topo>
+    <div class="col-md-12">
+        <div class="row">
         
-        <div class="col-md-1">
-            <app-controles 
-                (controleIncluirMusica)="incluirMusicasPlaylist()"
-                (controleRemoverMusica)="removerMusicasPlaylist()"
-            >
-            </app-controles>
-        </div>
-
-        <div class="col-md-5">
-                <app-playlist ></app-playlist>
+            <div class="col-md-5" style="padding-left: 0%;">
+                <app-musica [musicas]="musicasLista"></app-musica>
+            </div>
+            
+            <div class="col-md-1" style="padding-left: 5%;">
+                <app-controles 
+                    (controleIncluirMusica)="incluirMusicasPlaylist()"
+                    (controleRemoverMusica)="removerMusicasPlaylist()"
+                >
+                </app-controles>
+            </div>
+    
+            <div class="col-md-5" style="padding-left: 2%;">
+                    <app-playlist [playlist]="playlist"></app-playlist>
+            </div>
         </div>
     </div>
+    
 </div>
 
