--- a/musica-frontend/src/app/controles/controles.component.html
+++ b/musica-frontend/src/app/controles/controles.component.html
@@ -1,4 +1,10 @@
-<button type="button" (click) = "controleIncluirMusica.emit($event)" class="btn btn-dark">>></button>
-<br>
-<br>
-<button type="button" (click) = "controleRemoverMusica.emit($event)" class="btn btn-dark"><<</button>
+
+<div>
+    
+    <button type="button" (click) = "controleIncluirMusica.emit($event)" class="btn">>></button>
+    <br>
+    <br>
+    <button type="button" (click) = "controleRemoverMusica.emit($event)" class="btn"><<</button>    
+
+</div>
+
