--- a/musica-frontend/src/app/playlist/playlist.component.html
+++ b/musica-frontend/src/app/playlist/playlist.component.html
@@ -1,21 +1,26 @@
-<table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Music name</th>
-        <th scope="col">Artist name</th>
-        <th scope="col"></th>
-      </tr>
-    </thead>
-    <!-- <tbody>
-      <tr *ngFor="let musica of musicas">
-        <td>{{ musica.nome }}</td>
-        <td>{{ musica.artista.nome }}</td>
-        <td>
-            <input type="checkbox" (click) = "checkedMusic(musica)"/>
-        </td>
-        <td>
-          {{ musica.checked }}
-        </td>
-      </tr>
-    </tbody> -->
-  </table>
+<div style="padding-left: 15%;">
+  <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">Music name</th>
+          <th scope="col">Artist name</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr></tr>
+        <tr></tr>
+        <tr></tr>
+        <tr *ngFor="let item of playlist.playlistMusicas">
+          <td>{{ item.musica.nome }}</td>
+          <td>{{ item.musica.artista.nome }}</td>
+          <td>
+              <input type="radio" (click)="checkedMusic(item.musica)"  name="radiogroup" /> 
+          </td>
+          <!-- <td>
+            {{item.musica.checked}}
+          </td> -->
+        </tr> 
+      </tbody>
+    </table>
+</div>    
