--- a/musica-frontend/src/app/topo/topo.component.html
+++ b/musica-frontend/src/app/topo/topo.component.html
@@ -1,19 +1,23 @@
-<div class="container">
-    <div class="col-md-12">
-        <div class="row">
+
+
+<link href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"/>
+<div class="container" style="padding-top: 5%">
+    <div class="row">
+        
         <div class="col-md-5">
-          <div class="form-group">
-              <label for="MusicOrArtist">Music or Artist</label>
-              <input type="text" class="form-control" (keyup) = "topoMusicSearch.emit($event)"/>
-          </div>
+          <div class="form-group">                                                        
+                <div class="input-group">                                    
+                  Music or Artist <input type="text" class="form-control form-rounded" style="margin-left: 20px;" placeholder="&#xf002;"  (keyup) = "topoMusicSearch.emit($event)"/>
+                </div>  
+        </div>
        </div>
        <div class="col-md-1"></div>
-       <div class="col-md-5">
-          <div class="form-group">
-            <label for="User">User</label>
-            <input type="text" class="form-control" (keyup) = "topoPlaylistSearch.emit($event)"/>
+       <div class="col-md-5" style="padding-left: 12%; padding-right: 5%">
+          <div class="form-group">            
+            <div class="input-group">  
+              User  <input type="text" class="form-control" style="margin-left: 20px;" (keyup) = "topoPlaylistSearch.emit($event)"/>
+            </div>
           </div>
-        </div>
-        </div>
-   </div>
-  </div>
+    </div>
+    
+</div>
